<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/loginpagetitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/loginPageTitle"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/usernametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginpagetitle"
        android:layout_marginStart="60dp"
        android:layout_marginTop="61dp"
        android:text="@string/usernameText" />

    <EditText
        android:id="@+id/usernameedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginpagetitle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:layout_toEndOf="@id/usernametext"
        android:ems="10"
        android:inputType="text"
        android:hint="Username"/>

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernametext"
        android:layout_marginStart="60dp"
        android:layout_marginTop="52dp"
        android:text="@string/passwordText"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/passwordedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameedit"
        android:layout_marginStart="11dp"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@id/passwordtext"
        android:ems="10"
        android:inputType="text"
        android:hint="Password"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordedit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:text="@string/loginButtonText" />
</RelativeLayout>